fix: hints input box too narrow in problem editor settings sidebar (#81)

--- a/src/editors/containers/ProblemEditor/components/EditProblemView/index.scss
+++ b/src/editors/containers/ProblemEditor/components/EditProblemView/index.scss
@@ -18,6 +18,10 @@
     }
   }
 
+  .settingsOption.hints-card {
+    align-items: stretch;
+  }
+
   .settingsOption {
     .pgn__form-checkbox .pgn__form-label {
       min-width: .8rem;
